Created containerised Node-RED for IBM Cloud

--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
         "express":"4.x",
         "body-parser":"1.x",
         "http-shutdown":"1.2.0",
-        "node-red": "0.x",
-        "node-red-bluemix-nodes":"1.x",
-        "node-red-node-watson":"0.x",
-        "node-red-node-openwhisk":"0.x",
-        "node-red-node-cf-cloudant":"0.x",
-        "node-red-contrib-scx-ibmiotapp":"0.x",
-        "node-red-nodes-cf-sqldb-dashdb":"0.x"
+        "node-red": "*",
+        "node-red-bluemix-nodes":"*",
+        "node-red-node-watson":"*",
+        "node-red-node-openwhisk":"*",
+        "node-red-node-cf-cloudant":"*",
+        "node-red-contrib-scx-ibmiotapp":"*",
+        "node-red-contrib-ibm-wiotp-device-ops": "*",
+        "node-red-contrib-iot-virtual-device": "*",
+        "node-red-contrib-web-worldmap": "*",
+        "node-red-dashboard": "*",
+        "node-red-nodes-cf-sqldb-dashdb":"*",
+        "node-red-node-data-generator": "*",
+        "node-red-contrib-counter": "*",
+        "node-red-node-random": "*",
+        "node-red-contrib-composer": "*",
+        "node-red-node-msgpack": "*",
+        "node-red-node-base64": "*"
     },
     "scripts": {
         "start": "node --max-old-space-size=384 index.js --settings ./bluemix-settings.js -v"
